objects/ssot__LearningOutcomeItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CategoryText__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationNumber__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationUnit__c</fullName>
        <label>Duration Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Learning Outcome Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningAchievementId__c</fullName>
        <label>Learning Achievement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningId__c</fullName>
        <label>Learning</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumNumericGradeNumber__c</fullName>
        <label>Minimum Numeric Grade</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819884819_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningOutcomeItem_LearningId_map_L_rel</label>
        <referenceTo>ssot__Learning__dlm</referenceTo>
        <relationshipLabel>LearningOutcomeItem_LearningId_map_L_rel</relationshipLabel>
        <relationshipName>rel_1719819884819_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819887171_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningOutcomeItem_LearningAchievem_rel</label>
        <referenceTo>ssot__LearningAchievement__dlm</referenceTo>
        <relationshipLabel>LearningOutcomeItem_LearningAchievem_rel</relationshipLabel>
        <relationshipName>rel_1719819887171_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>